--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,11 @@
 	<groupId>RestAssure</groupId>
 	<artifactId>RestAssure</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jre.level>1.8</jre.level>
+		<jdk.level>1.8</jdk.level>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
